--- a/sass_bem_wireframe_practice/scss/layout/_testimonials.scss
+++ b/sass_bem_wireframe_practice/scss/layout/_testimonials.scss
@@ -3,7 +3,7 @@
   @include flexCol;
   align-items: center;
 
-  padding: calc(120 / 1680) * 100% calc(80 / 1680) * 100%;
+  padding: calc(120 / 1680) * 100% calc(80 / 1680) * 100% calc(80 / 1680) * 100%;
 
   text-align: center;
 
@@ -19,6 +19,7 @@
 
   &__text {
     font-size: 36px;
+    line-height: 1.39;
   }
 
   &__items {
@@ -35,3 +36,59 @@
     margin: 40px;
   }
 }
+
+// testimonials one-line
+.one-line {
+  justify-content: center;
+
+  padding: 0;
+  max-width: 1520px;
+}
+
+// testimonials ellipse
+.testimonials__img {
+  margin-top: calc(8 / 1520) * 100%;
+  margin-bottom: calc(16 / 1520) * 100%;
+}
+
+.testimonials__bottom {
+  margin-bottom: calc(40 / 1520) * 100%;
+}
+
+// testimonials rectangle-right
+.rectangle-right {
+  @include flexRow;
+
+  padding: 0;
+
+  text-align: start;
+
+  .testimonials__box {
+    flex: 1 1 calc(1172 / 1680) * 100%;
+
+    padding: calc(120 / 1680) * 100% calc(80 / 1680) * 100%;
+  }
+
+  .testimonials__bg {
+    flex: 1 1 calc(508 / 1680) * 100%;
+
+    display: flex;
+  }
+
+  .testimonials__text {
+    margin-bottom: calc(40 / 1012) * 100%;
+  }
+
+  .testimonials__img {
+    margin: 0 20px calc(44 / 1012) * 100% 0;
+  }
+
+  .testimonials__bottom {
+    margin: 0;
+    margin-top: 6px;
+    display: inline-block;
+  }
+}
+
+// testimonials with-card
+
